--- a/01_aulas/02_aula_minicurso_r_see_2019.Rmd
+++ b/01_aulas/02_aula_minicurso_r_see_2019.Rmd
@@ -2,7 +2,7 @@
 title: "XXX Semana de Estudos da Ecologia <br><br> Introdução à linguagem R: manipulação e visualização de dados"
 subtitle: "<br> 2 Funcionamento da linguagem R <br>"
 author: "Maurício Vancine <br> Helena Oliveira <br> Lucas Almeida <br>"
-date: "<br> xaringan [presentation ninja] <br> 06/11/2019"
+date: "<br> 06/11/2019"
 encoding: "UTF-8"
 output:
   xaringan::moon_reader:
@@ -63,6 +63,8 @@ background-size: 800px
 background-position: 50% 50%
 
 # 2.1 RStudio
+
+## IDE (*Integrated Development Environment*)
 
 ---
 
@@ -296,15 +298,15 @@ print("Isso é o resultado que deve aparecer no console")
 
 ---
 
-background-image: url(https://external-preview.redd.it/fRuJ7ThyWO2S2Qof2rDCTetabr4nnruL4J7ux3mwqw0.jpg?auto=webp&s=5e3bd38ade26e1d03c02f93ebd7defe01a5dc06a)
-background-size: 350px
-background-position: 50% 90%
+background-image: url(img/utf8.png)
+background-size: 700px
+background-position: 50% 75%
 
 # 2.2 Editor/Roteiro (*code*/*script*)
 
 ## Escolher UTF-8
 
-`Ferramentas (Tools) -> Opções Globais (Global Options) ->  (Code) -> s (Saving) -> Default text endcoding (UTF-8)`
+`Ferramentas (Tools) -> Opções Globais (Global Options) ->  (Code) -> s (Saving) -> Default text encoding (UTF-8)`
 
 ---
 
@@ -424,7 +426,7 @@ class: inverse, middle, center
 
 --
 
-### São úteis para **descrever informações** sobre o **script** ou **comandos**
+### Úteis para **descrever informações** sobre o **script** ou **comandos**
 
 --
 
@@ -434,7 +436,7 @@ class: inverse, middle, center
 ### aula 02 - funcionamento do r ###
 
 # seu nome
-# 22-10-2019
+# 06-11-2019
 ```
 
 --
@@ -452,18 +454,6 @@ class: inverse, middle, center
 
 class: clear, inverse, middle, center
 # Vocês são organizados?
-
----
-
-class: clean, inverse, middle, center
-# Aqui organização funciona como seleção natural... =]
-
----
-
-class: inverse, center, middle
-background-image: url(https://media0.giphy.com/media/xT1XGMZdyChId6fvIk/giphy.gif)
-background-size: 700px
-background-position: 50% 50%
 
 ---
 
@@ -485,7 +475,7 @@ background-position: 50% 50%
 
 --
 
-<br><br>
+<br>
 
 [Google’s R Style Guide](http://adv-r.had.co.nz/Style.html)
 
@@ -565,7 +555,7 @@ background-position: 50% 50%
 
 class: clear, inverse, center, middle
 
-# Alguém notou esses colchetes a mais?
+# Alguém notou esses colchetes a mais na resposta?
 
 ---
 
@@ -708,11 +698,11 @@ obj
 
 --
 
-1. Nome de objetos só podem **começar por letras (a-z ou A-Z) ou pontos (.)**
+1. Só podem **começar por letras (a-z ou A-Z) ou pontos (.)**
 
 --
 
-2. Nome de objetos só podem **conter letras, números, underscores (_) ou pontos (.)**
+2. Só podem **conter letras, números, underscores (_) ou pontos (.)**
 
 --
 
@@ -1347,7 +1337,7 @@ background-position: 35% 60%
 
 # 2.8 Pacotes
 
-```{r}
+```{r,eval=FALSE}
 nrow(available.packages(repos = "http://cran.r-project.org"))
 ```
 
