--- a/01_aulas/01_aula_minicurso_r_see_2019.Rmd
+++ b/01_aulas/01_aula_minicurso_r_see_2019.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "XXX Semana de Estudos da Ecologia <br><br> Introdução à linguagem R: manipulação e visualização de dados"
-subtitle: "<br> 1 Linguagem R, aplicações e material <br>"
+subtitle: "<br>1 Linguagem R, aplicações e material <br>"
 author: "Maurício Vancine <br> Helena Oliveira <br> Lucas Almeida <br>"
-date: "<br> xaringan [presentation ninja] <br> 06/11/2019"
+date: "<br> 06/11/2019"
 encoding: "UTF-8"
 output:
   xaringan::moon_reader:
@@ -255,7 +255,7 @@ Prof. Victor Landeiro
 
 background-image: url(https://avatars3.githubusercontent.com/u/13972235?s=400&v=4)
 background-size: 250px
-background-position: 10% 70%
+background-position: 10% 65%
 
 # 1.4 Apostilas, sites e livros
 
@@ -394,7 +394,7 @@ background-position: 50% 60%
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-[*] https://www.ibpad.com.br/o-que-fazemos/publicacoes/introducao-ciencia-de-dados-com-r/
+[*] https://cdr.ibpad.com.br/
 
 ---
 
@@ -422,9 +422,9 @@ background-position: 50% 70%
 
 ## Livros
 
-### **R for Data Analysis in easy steps - R Programming essentials (2018)**
+### **R for Data Analysis (2018)**
 
-<br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 [*] https://ineasysteps.com/products-page/all_books/r-data-analysis-easy-steps/
 
@@ -438,9 +438,9 @@ background-position: 50% 70%
 
 ## Livros
 
-### **The Book of R: A First Course in Programming and Statistics (2016)**
+### **The Book of R (2016)**
 
-<br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 [*] https://nostarch.com/bookofr
 
@@ -729,11 +729,11 @@ background-position: 50% 50%
 
 # Recomendação
 
-## **Ciência de Dados com R: introdução (2018)**
+### **Ciência de Dados com R: introdução (2018)**
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-[*] https://www.ibpad.com.br/o-que-fazemos/publicacoes/introducao-ciencia-de-dados-com-r/
+[*] https://cdr.ibpad.com.br/
 
 ---
 
@@ -743,7 +743,7 @@ background-position: 50% 55%
 
 # Recomendação
 
-## **R for Data Science (2017)**
+### **R for Data Science (2017)**
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -757,7 +757,7 @@ background-position: 50% 50%
 
 # Recomendação
 
-## **R Markdown: The Definitive Guide (2018)**
+### **R Markdown: The Definitive Guide (2018)**
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
