--- a/01_aulas/02_aula_minicurso_r_see_2019.Rmd
+++ b/01_aulas/02_aula_minicurso_r_see_2019.Rmd
@@ -618,7 +618,7 @@ obj_10 <- 10
 
 ### Agora a palavra **obj_10** vale **10**
 
-#### Mas não aconteceu nada....
+### Mas não aconteceu nada....
 
 ---
 
@@ -1337,7 +1337,7 @@ background-position: 35% 60%
 
 # 2.8 Pacotes
 
-```{r,eval=FALSE}
+```{r}
 nrow(available.packages(repos = "http://cran.r-project.org"))
 ```
 
