--- a/01_aulas/03_aula_minicurso_r_see_2019.Rmd
+++ b/01_aulas/03_aula_minicurso_r_see_2019.Rmd
@@ -1160,305 +1160,83 @@ class: inverse, middle, center
 
 ---
 
+background-image: url(img/index.png)
+background-size: 500px
+background-position: 50% 60%
+
 # 3.4 Manejo de dados unidimensionais
 
-## Vetor e fator
+## **Indexação []**: acessa elementos de objetos
 
-### **1. Indexação []**: acessa elementos de vetores e fatores
+---
+
+# 3.4 Manejo de dados unidimensionais
+
+## **Indexação []**: acessa elementos de objetos
+
+### Vetor e fator
+
 ```{r}
 ## indexacao []
-# fixar a amostragem
-set.seed(42)
-
 # vetor
-se <- seq(0, 5, .01)
-se
-
-ve <- sample(se, 10)
-ve
+vec <- c(6, 1, 3, 6, 10, 5)
+vec
 ```
 
 ---
 
 # 3.4 Manejo de dados unidimensionais
 
-## Vetor e fator
+## **Indexação []**: acessa elementos de objetos
 
-### **1. Indexação []**: acessa elementos de vetores e fatores
+### Vetor e fator
 
 ### Selecionar elementos
 ```{r}
 # seleciona o quinto elemento
-ve[5]
+vec[5]
 ```
 --
+
 ```{r}
-# seleciona os elementos de 10 a 50
-ve[1:5] 
+# seleciona os elementos do primeiro ao quinto
+vec[1:5] 
 ```
+
 --
+
 ```{r}
-# seleciona os elementos 10 e 100 e atribuir
-ve_sel <- ve[c(1, 10)]
-ve_sel
+# seleciona o primeiro e o sexto elemento
+vec_sel <- vec[c(1, 6)]
+vec_sel
 ```
 
 ---
 
 # 3.4 Manejo de dados unidimensionais
 
-## Vetor e fator
+## **Indexação []**: acessa elementos de objetos
 
-### **1. Indexação []**: acessa elementos de vetores e fatores
+### Vetor e fator
 
 ### Retirar elementos
 ```{r}
-# retirar o decimo elemento
-ve[-10]
+# retira o quinto elemento
+vec[-5]
 ```
 --
+
 ```{r}
-# retirar os elementos 20 a 90
-ve[-(2:9)]
+# retira os elementos do primeiro ao quinto
+vec[-(1:5)] 
 ```
+
 --
+
 ```{r}
-# retirar os elementos 50 e 100 e atribuir
-ve_sub <- ve[-c(5, 10)]
-ve_sub
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **2 Seleção condicional**: selecionar elementos por condições 
-```{r}
-# dois vetores
-foo <- 42
-bar <- 23
-```
---
-```{r, eval = FALSE}
-# operadores relacionais - saidas booleanas (TRUE ou FALSE)
-foo == bar # igualdade
-foo != bar # diferenca 
-foo > bar # maior
-foo >= bar # maior ou igual
-foo < bar # menor
-foo <= bar # menor ou igual
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **2 Seleção condicional**: selecionar elementos por condições 
-```{r}
-# quais valores sao maiores que 1?
-ve > 1
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **2 Seleção condicional**: selecionar elementos por condições
-```{r}
-# valores acima de 1
-ve[ve > 1] 
-```
---
-```{r}
-# atribuir valores maiores que 1
-ve_maior1 <- ve[ve > 1]
-ve_maior1
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *max*, *min*, *range*, *length*, *sort*, e *round*
-```{r}
-# maximo
-max(ve)
-```
---
-```{r}
-# minimo
-min(ve)
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *max*, *min*, *range*, *length*, *sort*, e *round*
-```{r}
-# amplitude
-range(ve)
-```
---
-```{r}
-# comprimento
-length(ve)
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *max*, *min*, *range*, *length*, *sort* e *round*
-```{r}
-# ordenar crescente
-sort(ve)
-```
---
-```{r}
-# ordenar decrescente
-sort(ve, dec = TRUE)
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *max*, *min*, *range*, *length*, *sort* e *round*
-```{r}
-# arredondamento
-ve
-```
---
-```{r}
-# arredondamento
-round(ve, digits = 1)
-```
---
-```{r}
-# arredondamento
-round(ve, digits = 0)
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *any()*, *all()* e *which()*
-```{r}
-# algum?
-any(ve > 1)
-```
---
-```{r}
-# todos?
-all(ve > 1)
-```
---
-```{r}
-# qual(is)?
-which(ve > 1)
-```
-
----
-
-# 3.4 Manejo de dados unidimensionais
-
-## Vetor e fator
-
-### **3 Funções de manejo**: *subset* e *ifelse*
-```{r}
-# subconjunto
-subset(ve, ve > 1)
-```
---
-```{r}
-# condicao para uma operacao
-ifelse(ve > 1, 1, 0)
-```
-
----
-
-class: clean, inverse, middle, center
-# Exercícios
-
----
-
-# Exercício 12
-
-## Manejo de dados unidimensionais 
-### Alguns problemas:
-1. Crie um vetor resultante da amostragem aleatória de 100 números entre 0 a 1 com intervalo de 0.01
-2. Ordene esse vetor de forma decrescente e atribua a um novo objeto
-3. Quanto e quais valores desse novo objeto são menores que 0.5?
-4. Transforme o vetor do .2 em binário (0 e 1), sendo que acima do valor da média desse vetor seja 1 e abaixo seja 0 atribuindo a um novo objeto
-
----
-
-# Exercício 12
-
-## Manejo de dados unidimensionais 
-### Solução
-```{r}
-# solucao
-# 1. 
-ve <- sample(seq(0, 1, 1e-2), 1e2)
-ve
-```
-
----
-
-# Exercício 12
-
-## Manejo de dados unidimensionais 
-### Solução
-```{r}
-# solucao
-# 2. 
-ve_de <- sort(ve, decreasing = TRUE)
-ve_de
-```
-
----
-
-# Exercício 12
-
-## Manejo de dados unidimensionais 
-### Solução
-```{r}
-# solucao
-# 3. 
-length(ve_de[ve_de < 0.5])
-which(ve_de < 0.5)
-```
-
----
-
-# Exercício 12
-
-## Manejo de dados unidimensionais 
-### Solução
-```{r}
-# solucao
-# 4. 
-ve_de_bi <- ifelse(ve_de > mean(ve_de), 1, 0)
-ve_de_bi
+# retira o primeiro e o sexto elemento
+vec_sub <- vec[-c(1, 6)]
+vec_sub
 ```
 
 ---
@@ -1469,21 +1247,35 @@ class: inverse, center, middle
 
 ---
 
+background-image: url(https://www.guru99.com/images/r_programming/032918_1452_RDataFrames1.png)
+background-size: 400px
+background-position: 50% 50%
+
+# 3.5 Manejo de dados bidimensionais
+
+## **Indexação []**
+
+### Matrizes e Data Frames
+
+---
+
 background-image: url(https://www.guru99.com/images/r_programming/032918_1452_RDataFrames2.png)
 background-size: 700px
 background-position: 50% 70%
 
 # 3.5 Manejo de dados bidimensionais
 
-## Matrizes e Data Frames
+## **Indexação []**
+
+### Matrizes e Data Frames
 
 ---
 
 # 3.5 Manejo de dados bidimensionais
 
-## Matrizes e Data Frames
+## **Indexação []**
 
-### **1 Indexação []**
+### Matrizes e Data Frames
 ```{r}
 # matriz
 ma <- matrix(1:12, 4, 3)
@@ -1492,23 +1284,11 @@ ma
 
 ---
 
-background-image: url(https://www.guru99.com/images/r_programming/032918_1452_RDataFrames1.png)
-background-size: 400px
-background-position: 50% 50%
-
 # 3.5 Manejo de dados bidimensionais
 
-## Matrizes e Data Frames
+## **Indexação []**
 
-### **1 Indexação []**
-
----
-
-# 3.5 Manejo de dados bidimensionais
-
-## Matrizes e Data Frames
-
-### **1 Indexação []**
+### Matrizes e Data Frames
 ```{r}
 ma[3, ] # linha 3
 ```
@@ -1529,9 +1309,9 @@ ma[1, 1:2] # elementos da linha 1 e coluna 1 e 2
 
 # 3.5 Manejo de dados bidimensionais
 
-## Matrizes e Data Frames
+## **Indexação []**
 
-### **1 Indexação []**
+### Matrizes e Data Frames
 ```{r}
 ma[1, c(1, 3)] # elementos da linha 1 e coluna 1 e 3
 ```
@@ -1549,17 +1329,18 @@ background-position: 50% 75%
 
 # 3.5 Manejo de dados bidimensionais
 
-## Matrizes e Data Frames
+## **Indexação []**
 
-### **1 Indexação []**: resumindo
+### Matrizes e Data Frames: resumindo
 
 ---
 
 # 3.5 Manejo de dados bidimensionais
 
-## Data Frames
+## **Indexação $**
 
-### **1 Indexação $**
+### Data Frames
+
 ```{r}
 # criar tres vetores
 sp <- paste("sp", 1:10, sep = "")
@@ -1577,9 +1358,10 @@ df
 
 # 3.5 Manejo de dados bidimensionais
 
-## Data Frames
+## **Indexação $**
 
-### **1 Indexação $**
+### Data Frames
+
 ```{r}
 # $ funciona apenas para data frame 
 df$sp 
@@ -1597,23 +1379,10 @@ df$flo
 
 # 3.5 Manejo de dados bidimensionais
 
-## Data Frames
-
-### **1 Indexação $**
-```{r}
-length(df$abu)
-max(df$abu)
-min(df$abu)
-range(df$abu)
-```
-
----
-
-# 3.5 Manejo de dados bidimensionais
+## **Indexação $ e mudanças de colunas**
 
 ## Data Frames
 
-### **1 Indexação $ e mudanças de colunas**
 ```{r}
 mode(df$abu)
 ```
@@ -1632,9 +1401,9 @@ mode(df$abu)
 
 # 3.5 Manejo de dados bidimensionais
 
-## Data Frames
+## **Indexação $ e mudanças de colunas**
 
-### **1 Indexação $ e mudanças de colunas**
+## Data Frames
 ```{r}
 df$abu <- as.numeric(df$abu)
 ```
@@ -1648,10 +1417,11 @@ mode(df$abu)
 
 # 3.5 Manejo de dados bidimensionais
 
-## Data Frames
+## **Indexação $ e mudanças de colunas**
 
-### **1 Indexação $ e adicionar uma coluna**
+## Data Frames
 ```{r}
+# adicionar uma coluna
 set.seed(1)
 df$abu2 <- sample(0:1, nrow(df), rep = TRUE)
 ```
@@ -1663,70 +1433,6 @@ df$abu2
 ```{r}
 df
 ```
-
----
-
-# 3.5 Manejo de dados bidimensionais
-
-## Data Frames
-
-### **2 Seleção condicional**
-
-### Selecionar linhas = filtro do planilha eletrônica
-```{r}
-# selecionar linhas de uma matriz ou data frame 
-df[df$abu > 4, ]
-```
-
----
-
-# 3.5 Manejo de dados bidimensionais
-
-## Data Frames
-
-### **2 Seleção condicional**
-
-### Selecionar linhas = filtro do planilha eletrônica
-```{r}
-# selecionar linhas de uma matriz ou data frame 
-df[df$abu2 == 0, ]
-```
-
----
-
-# 3.5 Manejo de dados bidimensionais
-
-## Data Frames
-
-### **2 Seleção condicional**
-
-### Selecionar linhas = filtro do planilha eletrônica
-```{r}
-# selecionar linhas de uma matriz ou data frame 
-df[df$flo == "floresta", ]
-```
-
----
-
-# 3.5 Manejo de dados bidimensionais
-
-## Matrizes e Data Frames
-
-### **3 Funções de visualização e manejo**
-
-**head()**: mostra as primeiras 6 linhas<br>
-**tail()**: mostra as últimas 6 linhas<br>
-**nrow()**: mostra o número de linhas<br>
-**ncol()**: mostra o número de colunas<br>
-**dim()**: mostra o número de linhas e de colunas<br>
-**rownames()**: mostra os nomes das linhas (locais)<br>
-**colnames()**: mostra os nomes das colunas (variáveis)<br>
-**str()**: mostra as classes de cada coluna (estrutura)<br>
-**summary()**: mostra um resumo dos valores de cada coluna<br>
-**rowSums()**: calcula a soma das linhas (horizontal)<br>
-**colSums()**: calcula a soma das colunas (vertical)<br>
-**rowMeans()**: calcula a média das linhas (horizontal)<br>
-**colMeans()**: calcula a média das colunas (vertical)
 
 ---
 
@@ -1818,19 +1524,6 @@ nrow(df_sem_na)
 
 # 3.6 Valores faltantes e especiais
 
-## **1 NA (Not Available)**
-
-### Vamos substituir os NA's por 0
-```{r}
-# substituir na por 0
-df[is.na(df)] <- 0
-df
-```
-
----
-
-# 3.6 Valores faltantes e especiais
-
 ## **2 NaN (Not a Number)**
 
 ### Representa indefinições matemáticas como 0/0 e log(-1)
@@ -1840,30 +1533,6 @@ df
 0/0
 
 log(-1)
-```
-
----
-
-# 3.6 Valores faltantes e especiais
-
-## **2 NaN (Not a Number)**
-
-### Um **NaN** é um **NA**, mas o **NA** não é um **NaN**
-
-```{r}
-# criar um vetor
-ve <- c(1, 2, 3, NA, NaN)
-ve
-```
---
-```{r}
-# verificar a presenca de na
-is.na(ve)
-```
---
-```{r}
-# verificar a presenca de nan
-is.nan(ve)
 ```
 
 ---
@@ -1984,9 +1653,6 @@ read.csv("ATLANTIC_AMPHIBIANS_sites.csv")
 # 3.8 Importar dados
 
 ## Ler e atribuir uma planilha eletrônica (.csv) a um objeto
-
---
-
 ```{r, eval = FALSE}
 # ler e atribuir uma planilha eletronica (.csv) a um objeto
 da <- read.csv("ATLANTIC_AMPHIBIANS_sites.csv")
@@ -1997,7 +1663,7 @@ da <- read.csv("ATLANTIC_AMPHIBIANS_sites.csv")
 da
 ```
 --
-```{r, eval = FALSE}
+```{r}
 # conferir a classe
 class(da)
 ```
@@ -2031,6 +1697,7 @@ da
 ### Pacote **openxlsx**
 ```{r, eval = FALSE}
 # pacote openxlsx
+
 # install.packages("openxlsx")
 library(openxlsx)
 ```
@@ -2074,15 +1741,6 @@ da <- read.csv("/home/mude/data/github/minicurso-r-see-2019/03_dados/ATLANTIC_AM
 
 ```{r}
 head(da)
-```
-
----
-
-# 3.9 Conferir e manejar dados importados
-
-## **head()**: mostra as primeiras 10 linhas
-```{r}
-head(da, 10)
 ```
 
 ---
@@ -2187,17 +1845,6 @@ nrow(da_na)
 
 ---
 
-# 3.9 Conferir e manejar dados importados
-
-## Subset das linhas
-```{r}
-# subset das linhas com amostragens em sao paulo
-da_sp <- da[da$state == "São Paulo", ]
-da_sp
-```
-
----
-
 class: inverse, center, middle
 
 # Dúvidas?
@@ -2212,7 +1859,7 @@ class: inverse, center, middle
 
 ### Planilha eletrônica (.csv)
 ```{r, eval = FALSE}
-write.csv(da_sp, "ATLANTIC_AMPHIBIAN_sites_sao_paulo.csv", 
+write.csv(da_na, "ATLANTIC_AMPHIBIAN_sites_sem_na.csv", 
           row.names = FALSE, quote = FALSE)
 ```
 
@@ -2220,7 +1867,7 @@ write.csv(da_sp, "ATLANTIC_AMPHIBIAN_sites_sao_paulo.csv",
 
 ### Planilha de texto (.txt)
 ```{r, eval = FALSE}
-write.table(da_sp, "ATLANTIC_AMPHIBIAN_sites_sao_paulo.txt", 
+write.table(da_na, "ATLANTIC_AMPHIBIAN_sites_sem_na.txt", 
             row.names = FALSE, quote = FALSE)
 ```
 
@@ -2228,7 +1875,7 @@ write.table(da_sp, "ATLANTIC_AMPHIBIAN_sites_sao_paulo.txt",
 
 ### Planilha eletrônica (.xlsx)
 ```{r, eval = FALSE, warning = FALSE}
-openxlsx::write.xlsx(da_sp, "ATLANTIC_AMPHIBIAN_sites_sao_paulo.xlsx", 
+openxlsx::write.xlsx(da_na, "ATLANTIC_AMPHIBIAN_sites_sem_na.xlsx", 
                      row.names = FALSE, quote = FALSE)
 ```
 
